- Downgraded to Java 8